--- a/src/Component/Navbar.css
+++ b/src/Component/Navbar.css
@@ -1,24 +1,9 @@
 .navbar {
-    padding: 20px ;
+    padding: 20px 20px 30px 20px ;
 }
-.logo{
-    padding: 15px;
-}
-.nav_n{
 
+.navbar-light .navbar-nav .nav-link {
+    color: #276678;
+    font-size: 20px;
 }
-.nav_n ul{
-    list-style: none;
-}
-.nav_n ul li {
-    display: inline-block;
-    padding: 15px;
-}
-.nav_n ul li a{
-    text-decoration: none;
-    color: #333;
-}
-.nav_n ul li a:hover{
-    padding: 3px;
-    border-bottom: 2px solid tan;
-}
+
