--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 body{
     color: #333;
     font-size: 18px;
+    background-color: #f6f5f5;
+    font-family: 'Potta One', cursive;
 }
 .container-fluid{
     padding-right: 0px !important; 
